[ARV-122] chore : 관현님의 코드 리뷰 반영